--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
 /* You can add global styles to this file, and also import other style files */
+/* @import "~@angular/material/prebuilt-themes/indigo-pink.css"; */
 body{
     padding:10px;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.mat-slide-toggle .mat-slide-toggle-bar {
+    background-color:rgb(252, 217, 174);
+    }
+    
+ .mat-slide-toggle.mat-checked .mat-slide-toggle-bar {
+      background-color:rgb(252, 217, 174);
+      }
+    
+.mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-thumb {
+      background-color:darkorange;
+    }
+    
